--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   <title>Путешествие по России</title>
 </head>
 <body>
-  
+  <div class="page">
+    <header class="header">
+      <img class="header__logo" src="images/header-logo.svg" alt="Логотип Россия">
+      <ul class="header__list">
+        <li class="header__list-item">
+          <a class="header__link" href="#">Ru</a>
+        </li>
+        <li class="header__list-item">
+          <a class="header__link" href="#">En</a>
+        </li>
+      </ul>
+    </header>
+    <main class="container"></main>
+    <footer class="footer"></footer>
+  </div>
 </body>
 </html>
