--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="header__logo" src="images/header-logo.svg" alt="Логотип Россия">
       <ul class="header__list">
         <li class="header__list-item">
-          <a class="header__link" href="#">Ru</a>
+          <a class="header__link header__link_activated" href="#">Ru</a>
         </li>
         <li class="header__list-item">
           <a class="header__link" href="#">En</a>
