--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </li>
       </ul>
     </header>
-    <main class="container"></main>
+    <main class="content">
+      
+    </main>
     <footer class="footer"></footer>
   </div>
 </body>
