--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
       </ul>
     </header>
     <main class="content">
-      
+      <section class="lead">
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <figure class="lead__figure">
+            <img alt="Спящая женщина в вагоне"
+            class="lead__image"
+            src="images/lead-polka.jpg">
+          <figcaption class="lead__caption">ваша полка - верхняя</figcaption>
+        </figure>
+      </section>
     </main>
     <footer class="footer"></footer>
   </div>
