--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
           <figcaption class="lead__caption">ваша полка - верхняя</figcaption>
         </figure>
       </section>
+      <section class="intro">
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="intro__list">
+          <li class="intro__fact">Часовых поясов&ensp;<span class="intro__numbers">11</span></li>
+          <li class="intro__fact">Объектов природного наследия ЮНЕСКО&ensp;<span class="intro__numbers">12</span></li>
+          <li class="intro__fact">Объектов культурного наследия ЮНЕСКО&ensp;<span class="intro__numbers">16</span></li>
+          <li class="intro__fact"> Природных заповедников&ensp;<span class="intro__numbers">105</span></li>
+          <li class="intro__fact">Аэропортов&ensp;<span class="intro__numbers">241</span></li>
+        </ul>
+      </section>
     </main>
     <footer class="footer"></footer>
   </div>
