--- a/index.html
+++ b/index.html
@@ -34,13 +34,29 @@
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но  только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__fact">Часовых поясов&ensp;<span class="intro__numbers">11</span></li>
-          <li class="intro__fact">Объектов природного наследия ЮНЕСКО&ensp;<span class="intro__numbers">12</span></li>
-          <li class="intro__fact">Объектов культурного наследия ЮНЕСКО&ensp;<span class="intro__numbers">16</span></li>
-          <li class="intro__fact"> Природных заповедников&ensp;<span class="intro__numbers">105</span></li>
-          <li class="intro__fact">Аэропортов&ensp;<span class="intro__numbers">241</span></li>
+          <li class="intro__fact">Часовых поясов <span class="intro__numbers">11</span></li>
+          <li class="intro__fact">Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
+          <li class="intro__fact">Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
+          <li class="intro__fact">Природных заповедников <span class="intro__numbers">105</span></li>
+          <li class="intro__fact">Аэропортов <span class="intro__numbers">241</span></li>
+        </ul>
+      </section>
+      <section  class="photo-grid">
+        <ul class="photo-grid__list">
+          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Фотография окна в поезде."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Снежные вершины гор, фотография с самолета."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман в поле, фотография."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Верхушки деревьев в тумане, фотография."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду, фотография."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Фотография пляжа на озере Байкал."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус, фотография."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак Пешеходный переход, фотография."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Фотография Камчатки с вертолета."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатская сопка, фотография."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Берег Байкала, фотография."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Фотография природного парка Ергаки в тумане."></li>
         </ul>
       </section>
     </main>
