--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
       </section>
       <section  class="photo-grid">
         <ul class="photo-grid__list">
-          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Фотография окна в поезде."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Снежные вершины гор, фотография с самолета."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман в поле, фотография."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Верхушки деревьев в тумане, фотография."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду, фотография."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Фотография пляжа на озере Байкал."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус, фотография."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак Пешеходный переход, фотография."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Фотография Камчатки с вертолета."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатская сопка, фотография."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Берег Байкала, фотография."></li>
-          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Фотография природного парка Ергаки в тумане."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Снежные вершины гор."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Овчарка."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Лес в тумане."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Горы."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Эргаки."></li>
         </ul>
       </section>
     </main>
