--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но  только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
           <li class="intro__fact">Часовых поясов <span class="intro__numbers">11</span></li>
           <li class="intro__fact">Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
@@ -45,7 +45,7 @@
       </section>
       <section  class="photo-grid">
         <ul class="photo-grid__list">
-          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда."></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt=" Поезд."></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Снежные вершины гор."></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Овчарка."></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Лес в тумане."></li>
