--- a/index.html
+++ b/index.html
@@ -59,6 +59,51 @@
           <li><img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Эргаки."></li>
         </ul>
       </section>
+      <section class="places">
+          <article class="place">
+            <h2 class="place__title">Куршская коса</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+            </div>
+            <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская Коса.">
+            <div>
+              <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны
+                и подёрнутого рябью волн Балтийского моря
+                с другой. Уникальная природная зона на краю российского анклава.</p>
+              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника
+                и исследователя там же по соседству — самая западная точка России, Балтийская коса, —
+                и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+                и запах стального, прохладного моря.</p>
+            </div>
+          </article>
+          <article class="place">
+            <h2 class="place__title">Кольский</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographicu</a>
+            </div>
+            <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский.">
+            <div>
+              <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+              <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
+                земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+            </div>
+          </article>
+          <article class="place">
+            <h2 class="place__title">Алтай</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">National Geographicu</a>
+            </div>
+            <img class="place__image" src="./images/place-kosa.jpg" alt="Алтай.">
+            <div>
+              <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+              <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
+                земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+            </div>
+          </article>
+      </section>
     </main>
     <footer class="footer"></footer>
   </div>
