--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
             </div>
           </article>
       </section>
+      <section class="cover">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"></a>
+      </section>
     </main>
     <footer class="footer"></footer>
   </div>
