--- a/index.html
+++ b/index.html
@@ -136,7 +136,17 @@
         </a>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div>
+        <ul class="footer__list">
+          <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        </ul>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
