--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
-              <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">Facebook</a>
+              <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
             </div>
             <img class="place__image" src="./images/place-altai.jpg" alt="Алтай.">
             <div>
-              <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+              <p class="place__paragraph">Алтай — одно из красивейших мест в России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
               <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
             </div>
           </article>
@@ -124,15 +124,14 @@
             <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия.">
             <div>
               <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
-В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
-в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                В&nbsp;девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
           </article>
       </section>
       <section class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе&nbsp;&mdash; путешествие от столицы до Байкала на электричках.</p>
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о Транссибе — путешествие от&nbsp;столицы до Байкала на электричках.</p>
         </a>
       </section>
     </main>
